--- a/default.conf
+++ b/default.conf
@@ -3,7 +3,7 @@ ssl_session_timeout 5m;
 client_max_body_size 0;
 
 server {
-  listen 80 http;
+  listen 80;
   server_name api.centurionx.net;
   
   location /plane/frame/ {
