--- a/default.conf
+++ b/default.conf
@@ -4,7 +4,7 @@ client_max_body_size 0;
 
 server {
   listen 80;
-  server_name api.centurionx.net;
+  server_name _;
   
   location /plane/frame/ {
     proxy_pass http://interplanewrangler:80;
