--- a/default.conf
+++ b/default.conf
@@ -9,4 +9,9 @@ server {
   location /plane/frame/ {
     proxy_pass http://interplanewrangler:80;
   }
+  location = /health {
+    access_log off;
+    add_header 'Content-Type' 'application/json';
+    return 200 '{"status":"UP"}';
+  }
 }
