--- a/default.conf
+++ b/default.conf
@@ -6,7 +6,7 @@ server {
   listen 80;
   server_name _;
   
-  location /plane/frame/ {
+  location /wrangler/frame/ {
     proxy_pass http://interplanewrangler:80;
   }
   location = /health {
