--- a/default.conf
+++ b/default.conf
@@ -7,6 +7,8 @@ server {
   server_name _;
   
   location /wrangler/frame/ {
+    proxy_pass_request_headers on;
+    proxy_set_header Host $host;
     proxy_pass http://interplanewrangler:80;
   }
   location = /health {
