--- a/default.conf
+++ b/default.conf
@@ -10,6 +10,8 @@ server {
     proxy_pass_request_headers on;
     proxy_set_header Host $host;
     proxy_pass http://interplanewrangler:80;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
   }
   location = /health {
     access_log off;
