--- a/default.conf
+++ b/default.conf
@@ -6,12 +6,14 @@ server {
   listen 80;
   server_name _;
   
-  location /wrangler/frame/ {
+  location /wrangler {
     proxy_pass_request_headers on;
     proxy_set_header Host $host;
+    add_header Access-Control-Allow-Origin *;
     proxy_pass http://interplanewrangler:80;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Port $server_port;
   }
   location = /health {
     access_log off;
