--- a/default.conf
+++ b/default.conf
@@ -5,7 +5,17 @@ client_max_body_size 0;
 server {
   listen 80;
   server_name _;
-  
+
+  location /indexer {
+    proxy_pass_request_headers on;
+    proxy_set_header Host $host;
+    add_header Access-Control-Allow-Origin *;
+    proxy_pass http://interplaneindexer:80;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Port $server_port;
+  }
+
   location /wrangler {
     proxy_pass_request_headers on;
     proxy_set_header Host $host;
@@ -15,6 +25,7 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-Port $server_port;
   }
+
   location = /health {
     access_log off;
     add_header 'Content-Type' 'application/json';
