--- a/default.conf
+++ b/default.conf
@@ -20,7 +20,7 @@ server {
     proxy_pass_request_headers on;
     proxy_set_header Host $host;
     add_header Access-Control-Allow-Origin *;
-    add_header 'Access-Control-Allow-Origin' 'origin';
+    add_header 'Access-Control-Allow-Origin' '*';
     proxy_pass http://interplanewrangler:8080;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
