--- a/default.conf
+++ b/default.conf
@@ -18,6 +18,9 @@ server {
 
   location /wrangler {
     proxy_pass http://interplanewrangler:8080;
+    proxy_set_header X-Forwarded-Port $server_port;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   }
 
   location = /health {
