--- a/default.conf
+++ b/default.conf
@@ -17,6 +17,9 @@ server {
   }
 
   location /wrangler {
+    proxy_pass_request_headers on;
+    proxy_set_header Host $host;
+    add_header Access-Control-Allow-Origin *;
     proxy_pass http://interplanewrangler:80;
     proxy_set_header X-Forwarded-Port $server_port;
     proxy_set_header X-Forwarded-Proto $scheme;
