--- a/default.conf
+++ b/default.conf
@@ -17,10 +17,13 @@ server {
   }
 
   location /wrangler {
+    proxy_pass http://interplanewrangler:8080;
+  }
+  location /wringler {
     proxy_pass_request_headers on;
     proxy_set_header Host $host;
     add_header Access-Control-Allow-Origin *;
-    proxy_pass http://interplanewrangler:8080;
+    proxy_pass http://interplanewranglernet8:8080;
 
   }
 
