--- a/default.conf
+++ b/default.conf
@@ -21,7 +21,9 @@ server {
     proxy_set_header Host $host;
     add_header Access-Control-Allow-Origin *;
     proxy_pass http://interplanewrangler:8080;
-
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Port $server_port;
   }
   location /wringler {
     proxy_pass_request_headers on;
