--- a/default.conf
+++ b/default.conf
@@ -23,6 +23,12 @@ server {
     proxy_pass http://interplanewrangler:8080;
   }
 
+  location /device {
+    proxy_pass_request_headers on;
+    proxy_set_header Host $host;
+    add_header Access-Control-Allow-Origin *;
+    proxy_pass http://interdevice:80;
+  }
 
   location = /health {
     access_log off;
