--- a/default.conf
+++ b/default.conf
@@ -27,7 +27,7 @@ server {
     proxy_pass_request_headers on;
     proxy_set_header Host $host;
     add_header Access-Control-Allow-Origin *;
-    proxy_pass http://interdevice:80;
+    proxy_pass http://interdevice:8080;
   }
 
   location = /health {
@@ -35,4 +35,16 @@ server {
     add_header 'Content-Type' 'application/json';
     return 200 '{"status":"UP"}';
   }
+}
+
+server {
+  listen 6000;
+  server_name device.centurionx.inter;
+  proxy_pass_request_headers on;
+  proxy_set_header Host $host;
+  add_header Access-Control-Allow-Origin *;
+  proxy_pass http://interdevice:6000;
+  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header X-Forwarded-Proto $scheme;
+  proxy_set_header X-Forwarded-Port $server_port;
 }
