--- a/default.conf
+++ b/default.conf
@@ -40,11 +40,5 @@ server {
 server {
   listen 6000;
   server_name device.centurionx.inter;
-  proxy_pass_request_headers on;
-  proxy_set_header Host $host;
-  add_header Access-Control-Allow-Origin *;
-  proxy_pass http://interdevice:6000;
-  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  proxy_set_header X-Forwarded-Proto $scheme;
-  proxy_set_header X-Forwarded-Port $server_port;
+  grpc_pass http://interdevice:6000;
 }
