--- a/default.conf
+++ b/default.conf
@@ -36,3 +36,13 @@ server {
     return 200 '{"status":"UP"}';
   }
 }
+server {
+    listen 6000;
+
+    http2 on;
+
+    location / {
+        grpc_pass interdevice:6000;
+    }
+}
+
