--- a/default.conf
+++ b/default.conf
@@ -41,6 +41,9 @@ server {
 
     server_name device.centurionx.inter;
     http2 on;
+    location /test {
+      return 400;
+    }
 
     location / {
         grpc_pass interdevice:6000;
