--- a/default.conf
+++ b/default.conf
@@ -6,12 +6,12 @@ server {
   listen 80;
   server_name _;
 
-  location /indexer {
-    proxy_pass_request_headers on;
-    proxy_set_header Host $host;
-    add_header Access-Control-Allow-Origin *;
-    proxy_pass http://interplaneindexer:8080;
-  }
+#  location /indexer {
+#    proxy_pass_request_headers on;
+#    proxy_set_header Host $host;
+#    add_header Access-Control-Allow-Origin *;
+#    proxy_pass http://interplaneindexer:8080;
+#  }
 
   location /wrangler {
     proxy_pass_request_headers on;
