--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
     # uses: nekiro/ssh-job@e0d177751aced5bcaf110ce4d782a681e5e12856
        uses: nekiro/ssh-job@v1.0.5
        with:
-        command: sudo docker pull ${{secrets.DOCKER_HOST}}/${{env.TAG}}; sudo docker stop ${{env.TAG}}; docker rm ${{env.TAG}}; sudo docker run --name ${{env.TAG}} --restart=unless-stopped -p 5002:80 -p 6000:6000 --net inter_network -m=250m --dns=10.0.0.33 -d ${{secrets.DOCKER_HOST}}/${{env.TAG}}; 
+        command: sudo docker pull ${{secrets.DOCKER_HOST}}/${{env.TAG}}; sudo docker stop ${{env.TAG}}; docker rm ${{env.TAG}}; sudo docker run --name ${{env.TAG}} --restart=unless-stopped -p 5002:80 -p 6000:6000 --net inter_network -m=250m --log-driver syslog --log-opt syslog-address=udp://10.3:2003 --dns=10.0.0.33 -d ${{secrets.DOCKER_HOST}}/${{env.TAG}}; 
         host: ${{secrets.HOST}}
         user: ${{secrets.CENTURION_USERNAME}}
         password: ${{secrets.CENTURION_PASSWORD}}
