--- a/default.conf
+++ b/default.conf
@@ -33,6 +33,9 @@ server {
     return 200 '{"status":"UP"}';
   }
 }
+
+
+    
 server {
     listen 6000;
 
@@ -42,5 +45,13 @@ server {
     location / {
         grpc_pass interdevice:6000;
     }
+}
+
+stream {
+  server {
+    listen 0.0.0.0:1883;
+
+    proxy_pass mosquitto:1883;
+  }
 }
 
