--- a/default.conf
+++ b/default.conf
@@ -1,3 +1,5 @@
+
+http {
 ssl_session_cache shared:SSL:2m;
 ssl_session_timeout 5m;
 client_max_body_size 0;
@@ -45,6 +47,7 @@ server {
     location / {
         grpc_pass interdevice:6000;
     }
+}
 }
 
 stream {
