--- a/default.conf
+++ b/default.conf
@@ -13,6 +13,14 @@ server {
     proxy_pass http://interplaneindexer:8080;
   }
 
+  location /ws {
+    proxy_pass http://mosquitto:8080/;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
+    proxy_set_header Host $host;
+  }
+
   location /wrangler {
     proxy_pass_request_headers on;
     proxy_set_header Host $host;
