--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,7 @@ jobs:
         username: ${{secrets.DOCKER_USERNAME}}
         password: ${{secrets.DOCKER_PASSWORD}}      
      - name: Build and push Docker images
-  # You may pin to the exact commit or the version.
-  # uses: docker/build-push-action@4a13e500e55cf31b7a5d59a38ab2040ab0f42f5
+  # You may pin to the exact commit or the version
        uses: docker/build-push-action@v5.1.0
        with:
         context: ./
