--- a/stream.conf
+++ b/stream.conf
@@ -1,11 +1,15 @@
 stream {
+#  server {
+#    listen 1883;
+#
+#    proxy_pass mosquitto:1883;
+#  }
   server {
-    listen 1883;
-
-    proxy_pass mosquitto:1883;
+    listen 15672;
+    proxy_pass rabbit:15672;
   }
-  server {
-    listen 6379;
-    proxy_pass redis:6379;
-  }
+#  server {
+#    listen 6379;
+#    proxy_pass redis:6379;
+#  }
 }
