--- a/default.conf
+++ b/default.conf
@@ -6,53 +6,53 @@ server {
   listen 80;
   server_name _;
 
-  location /indexer {
-    proxy_pass_request_headers on;
-    proxy_set_header Host $host;
-    add_header Access-Control-Allow-Origin *;
-    proxy_pass http://interplaneindexer:8080;
-  }
+#  location /indexer {
+#    proxy_pass_request_headers on;
+#    proxy_set_header Host $host;
+#    add_header Access-Control-Allow-Origin *;
+#    proxy_pass http://interplaneindexer:8080;
+#  }
 
-  location /ws {
-    proxy_pass http://mosquitto:8080/;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "Upgrade";
-    proxy_set_header Host $host;
-  }
+#  location /ws {
+#    proxy_pass http://mosquitto:8080/;
+#    proxy_http_version 1.1;
+#    proxy_set_header Upgrade $http_upgrade;
+#    proxy_set_header Connection "Upgrade";
+#    proxy_set_header Host $host;
+#  }
 
-  location /wrangler {
-    proxy_pass_request_headers on;
-    proxy_set_header Host $host;
-    add_header Access-Control-Allow-Origin *;
-    proxy_pass http://interplanewrangler:8080;
-  }
-
-  location /device {
-    proxy_pass_request_headers on;
-    proxy_set_header Host $host;
-    add_header Access-Control-Allow-Origin *;
-    proxy_pass http://interdevice:8080;
-  }
-
-  location = /health {
-    access_log off;
-    add_header 'Content-Type' 'application/json';
-    return 200 '{"status":"UP"}';
-  }
+#  location /wrangler {
+#    proxy_pass_request_headers on;
+#    proxy_set_header Host $host;
+#    add_header Access-Control-Allow-Origin *;
+#    proxy_pass http://interplanewrangler:8080;
+#  }
+#
+#  location /device {
+#    proxy_pass_request_headers on;
+#    proxy_set_header Host $host;
+#    add_header Access-Control-Allow-Origin *;
+#    proxy_pass http://interdevice:8080;
+#  }
+#
+#  location = /health {
+#    access_log off;
+#    add_header 'Content-Type' 'application/json';
+#    return 200 '{"status":"UP"}';
+#  }
 }
 
-
-    
-server {
-    listen 6000;
-
-    server_name device.centurionx.inter;
-    http2 on;
-
-    location / {
-        grpc_pass interdevice:6000;
-    }
-}
+#server {
+#
+# listen 6000;
+# 
+#  server_name device.centurionx.inter;
+#    http2 on;
+#
+#    location / {
+#        grpc_pass interdevice:6000;
+#    }
+#
+#}
 
 
