--- a/stream.conf
+++ b/stream.conf
@@ -6,7 +6,7 @@ stream {
 #  }
   server {
     listen 15672;
-    proxy_pass rabbit:15672;
+    proxy_pass rabbitplugs:15672;
   }
 #  server {
 #    listen 6379;
