--- a/default.conf
+++ b/default.conf
@@ -35,11 +35,11 @@ server {
 #    proxy_pass http://interdevice:8080;
 #  }
 #
-#  location = /health {
-#    access_log off;
-#    add_header 'Content-Type' 'application/json';
-#    return 200 '{"status":"UP"}';
-#  }
+  location = /health {
+    access_log off;
+    add_header 'Content-Type' 'application/json';
+    return 200 '{"status":"UP"}';
+  }
 }
 
 #server {
