--- a/stream.conf
+++ b/stream.conf
@@ -1,9 +1,14 @@
 stream {
-#  server {
-#    listen 1883;
-#
-#    proxy_pass mosquitto:1883;
-#  }
+  server {
+    listen 1883;
+
+    proxy_pass mosquitto:1883;
+  }
+
+  server {
+    listen 5672;
+    proxy_pass rabbitplugs:5672;
+  }
   server {
     listen 15672;
     proxy_pass rabbitplugs:15672;
